<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智能追踪器</string>
    <string name="hello_world">lv lanlan is a zhu!</string>

    <!-- AddBeaconActivity -->
    <string name="ble_not_supported">该设备不支持BLE或蓝牙未启用</string>
    <string name="add_beacon_notice_text">将贴片放在手机屏幕上\n进行自动配对</string>
    <string name="add_beacon_center_notice_text_help">搜寻中</string>
    <string name="add_beacon_center_notice_text">将贴片\n放在这里</string>

    <!-- MainActivity -->
    <string name="title_bar_back_text">返回</string>
    <string name="title_bar_right">报警</string>
    <string name="disconnect_delete">移除连接并删除设备</string>
    <string name="open_camera">打开相机</string>
    <string name="tracker_connect">连接设备</string>
    <string name="tracker_disconnect">断开连接</string>
    <string name="tracker_distance">安全距离调节</string>
    <string name="show_distance">距离</string>
    <string name="base_kilometers">1米</string>
    <string name="ten_kilometers">10米</string>
    <string name="select_alarm_ring">报警声音选择:</string>
    <string name="alarm_ring_name">警报音名</string>
    <string name="title_activity_select_ring">SelectRingActivity</string>
    <string name="action_settings">Settings</string>
    
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

</resources>
