<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#E4E2DF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:background="#E4E2DF">
        
        <RelativeLayout 
    	    android:id="@+id/layout_tracker_disconnect_delete"
    	    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E4E2DF"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            >
    	    <TextView 
    	        android:id="@+id/tv_tracker_disconnect_delete"
                android:text="@string/disconnect_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TvTextShow16Black"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>
    	    <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/youjiantou_light"
                android:scaleType="fitEnd"
                android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:contentDescription="@null"/>
    	</RelativeLayout>
        <ImageView 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:src="@drawable/black_line"
	            android:scaleType="fitXY"
	            android:contentDescription="@null"
	            android:paddingLeft="15dp"
	            android:paddingRight="15dp"
	            />
        <RelativeLayout 
    	    android:id="@+id/layout_tracker_open_camera"
    	    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E4E2DF"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            >
    	    <TextView 
    	        android:id="@+id/tv_tracker_open_camera"
                android:text="@string/open_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TvTextShow16Black"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>
    	    <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/youjiantou_light"
                android:scaleType="fitEnd"
                android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:contentDescription="@null"/>
    	</RelativeLayout>
        <ImageView 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:src="@drawable/black_line"
	            android:scaleType="fitXY"
	            android:contentDescription="@null"
	            android:paddingLeft="15dp"
	            android:paddingRight="15dp"
	            />
        <RelativeLayout 
    	    android:id="@+id/layout_tracker_connect"
    	    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E4E2DF"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            >
    	    <TextView 
    	        android:id="@+id/tv_tracker_connect"
                android:text="@string/tracker_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TvTextShow16Black"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>
    	</RelativeLayout>
        <ImageView 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:src="@drawable/black_line"
	            android:scaleType="fitXY"
	            android:contentDescription="@null"
	            android:paddingLeft="15dp"
	            android:paddingRight="15dp"
	            />
        <RelativeLayout 
    	    android:id="@+id/layout_tracker_disconnect"
    	    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E4E2DF"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            >
    	    <TextView 
    	        android:id="@+id/tv_tracker_disconnect"
                android:text="@string/tracker_disconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TvTextShow16Black"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>
    	</RelativeLayout>
        <ImageView 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:src="@drawable/black_line"
	            android:scaleType="fitXY"
	            android:contentDescription="@null"
	            android:paddingLeft="15dp"
	            android:paddingRight="15dp"
	            />
        <RelativeLayout 
    	    android:id="@+id/layout_tracker_distance"
    	    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E4E2DF"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            >
    	    <TextView 
    	        android:id="@+id/tv_tracker_distance"
                android:text="@string/tracker_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TvTextShow16Black"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>
            <TextView 
                android:id="@+id/tv_tracker_show_distance"
                android:layout_toRightOf="@id/tv_tracker_distance"
                android:layout_marginLeft="20dp"
                android:text="@string/show_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TvTextShow16Gray"
                android:layout_centerVertical="true"/>
    	</RelativeLayout>
        <ImageView 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:src="@drawable/black_line"
	            android:scaleType="fitXY"
	            android:contentDescription="@null"
	            android:paddingLeft="15dp"
	            android:paddingRight="15dp"
	            />
        <LinearLayout 
            android:id="@+id/layout_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:background="#E4E2DF"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="15dp">
            <TextView 
                android:id="@+id/tv_show_distance_seekbar"
                android:text="@string/base_kilometers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                style="@style/TvTextShow15Black"
                />
            <SeekBar
                android:id="@+id/pop_seekbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="50"
                android:progress="10"
                android:layout_weight="1"/>
            <TextView 
                android:text="@string/ten_kilometers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical|end"
                style="@style/TvTextShow15Black"/>
        </LinearLayout>
        <ImageView 
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:src="@drawable/black_line"
	            android:scaleType="fitXY"
	            android:contentDescription="@null"
	            android:paddingLeft="15dp"
	            android:paddingRight="15dp"
	            />
    	<RelativeLayout 
    	    android:id="@+id/layout_tracker_safity_area"
    	    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E4E2DF"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="15dp"
            >
    	    <TextView 
    	        android:id="@+id/tv_tracker_safity_area_title"
                android:text="@string/select_alarm_ring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TvTextShow16Black"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>
            <TextView 
                android:id="@+id/tv_tracker_safity_area"
                android:layout_toRightOf="@id/tv_tracker_safity_area_title"
                android:layout_toLeftOf="@+id/iv_tracker_safity_list"
                android:layout_marginLeft="20dp"
                android:text="@string/alarm_ring_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TvTextShow16Gray"
                android:layout_centerVertical="true"/>
            <ImageView 
                android:id="@+id/iv_tracker_safity_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/youjiantou_light"
                android:scaleType="fitEnd"
                android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:contentDescription="@null"/>
    	</RelativeLayout>
    </LinearLayout>
    

</ScrollView>
